--- a/styles.css
+++ b/styles.css
@@ -41,19 +41,10 @@ header {
 
 .logo-text {
   display: flex;
-  width: 145px;
-  height: 31px;
   font-family: "Raleway", sans-serif;
   align-items: center;
-}
-
-.logo-text {
   max-width: 145px;
   max-height: 31px;
-  left: 215px;
-  top: 24px;
-  font-family: "Raleway";
-  font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 31px;
@@ -61,7 +52,7 @@ header {
 }
 
 .logo-text > span:nth-of-type(1) {
-  color: #34e570;
+  color: #2196f3;
 }
 
 .nav-ul {
@@ -80,7 +71,7 @@ header {
 }
 
 .nav-ul > li:hover {
-  color: #34e570;
+  color: #2196f3;
   cursor: pointer;
   transition: color 0.3s;
 }
@@ -110,7 +101,7 @@ header {
 }
 
 .nav-addr > a:hover {
-  color: #34e570;
+  color: #2196f3;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -129,11 +120,13 @@ main {
 .bnr {
   flex: 1;
   width: 100%;
-  min-height: 600px;
+  min-height: 615px;
   background-color: #2f303a;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  padding: 25px;
 }
 
 .inner-bnr {
@@ -169,7 +162,7 @@ main {
   width: 216px;
   height: 50px;
   border-radius: 4px;
-  background-color: #34e570;
+  background-color: #2196f3;
   transition: all 0.3s ease;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
   border: 0;
@@ -193,7 +186,7 @@ main {
 
 .intro {
   flex: 1;
-  min-height: 600px;
+  min-height: 620px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -203,20 +196,16 @@ main {
 }
 
 .intro-container {
-  width: 1280px;
-}
-
-.intro-inner {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 100px;
+  justify-content: space-between;
+  width: 1280px;
 }
 
 .box-intro {
   flex: 1 1 280px;
   max-width: 280px;
+  margin-bottom: 20px;
 }
 
 .box-intro > span {
@@ -225,7 +214,6 @@ main {
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
 }
@@ -244,29 +232,18 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .img-container {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 100px;
-}
-
-.intro-gallery > h1 {
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
+  gap: 25px;
 }
 
 .img-box {
-  flex: 1 1 294px;
+  flex: 1 1 300px;
   width: 100%;
 }
 
@@ -300,13 +277,15 @@ main {
   background-color: #f5f4fa;
   min-height: 648px;
   display: flex;
-  justify-content: center;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  justify-content: space-between;
+  padding-top: 60px;
+
 }
 
 .team-container {
   width: 1280px;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .team-intro {
@@ -314,13 +293,14 @@ main {
   flex-wrap: wrap;
   width: 100%;
   justify-content: space-between;
+  gap: 25px;
 }
 
 .team-box {
-  flex: 1 1 270px;
-  max-width: 270px;
+  flex: 1 1 294px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 60px;
 }
 
 .team-img-box {
@@ -334,49 +314,35 @@ main {
   object-fit: cover;
 }
 
-.team-container > h1 {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  width: 100%;
-}
-
 .team-person {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 25px;
-  gap: 8px;
   background-color: #ffff;
+  padding: 25px;
+  gap: 10px;
 }
 
 .team-name {
   font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
-  letter-spacing: 0.03em;
-
   color: #212121;
+  padding: 0px;
+  margin: 0px;
+  font-weight: 700;
 }
 
 .team-role {
   font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
-  letter-spacing: 0.03em;
   color: #757575;
+  padding: 0px;
+  margin: 0px;
 }
 
 footer {
@@ -407,6 +373,7 @@ footer {
   flex-direction: column;
   gap: 10px;
 }
+
 .addr-sct > a {
   text-decoration: none;
   font-family: "Roboto";
@@ -434,6 +401,20 @@ footer {
   color: #ffffff;
 }
 
+.intro-gallery > h3,
+.team-container > h3 {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  color: #212121;
+}
+
 .custom-scroll::-webkit-scrollbar-thumb:hover {
   background: #a0a0a0;
+}
+
+.span-studio {
+  color: #fff;
 }
