--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-
 body {
   margin: 0;
   font-size: 14px;
@@ -142,7 +139,7 @@ main {
 }
 
 .bnr > h1 {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
@@ -154,8 +151,8 @@ main {
 }
 
 .order-btn {
-  width: 216px;
-  height: 50px;
+  font-family: "Roboto", sans-serif;
+  padding: 15px 30px;
   border-radius: 4px;
   background-color: #2196f3;
   transition: all 0.3s ease;
@@ -166,7 +163,6 @@ main {
   font-weight: 700;
   font-size: 16px;
   letter-spacing: 0.06em;
-  line-height: 30px;
 }
 
 .order-btn:hover {
@@ -199,6 +195,14 @@ main {
   margin-bottom: 80px;
 }
 
+.box-intro > h3 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+}
 
 .box-intro > p {
   font-weight: 400;
@@ -324,7 +328,7 @@ main {
 }
 
 .team-role {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
@@ -364,11 +368,10 @@ footer {
 
 .addr-sct > a {
   text-decoration: none;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 16px;
   letter-spacing: 0.03em;
   transition: 0.3s;
   color: rgba(255, 255, 255, 0.6);
@@ -380,7 +383,7 @@ footer {
 }
 
 .addr-sct > span {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -391,7 +394,7 @@ footer {
 
 .intro-gallery > h3,
 .team-container > h3 {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
@@ -419,42 +422,41 @@ footer {
   margin: 0 auto;
 }
 
-.slct {
+.filter-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 10px;
   margin-top: 120px;
   margin-bottom: 40px;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.slct-ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  display: flex;
-  gap: 10px;
-}
-
-.slct-ul > li {
-  display: inline-block;
+.filter-button {
+  padding: 6px 22px;
   background: #f5f4fa;
   border-radius: 4px;
-  padding: 10px 15px 10px 15px;
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-  color: #212121;
+  border: 0;
   transition: 0.3s;
 }
 
-.slct-ul > li:hover {
+.filter-button:hover {
   background: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   color: #ffffff;
   cursor: pointer;
+}
+
+.filter-button {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0.03em;
+  text-align: center;
 }
 
 .portfolio-container {
@@ -464,6 +466,7 @@ footer {
   margin-bottom: 100px;
   gap: 40px;
   align-items: center;
+  list-style: none;
 }
 
 .portfolio-box {
@@ -492,14 +495,14 @@ footer {
 }
 
 .intro-portfolio > h3 {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: #212121;
 }
 
 .intro-portfolio > p {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   color: #757575;
