--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header {
 
 .container {
   max-width: 1200px;
-  padding: 0 20px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
@@ -82,6 +82,7 @@ header > .container {
 }
 
 .logo-text {
+  text-decoration: none;
   display: flex;
   align-items: center;
   font-family: var(--font-secondary);
@@ -157,7 +158,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 25px;
 }
 
 .section--first > .container {
@@ -216,7 +216,7 @@ main {
 }
 
 .section--second .container {
-  gap: 20px;
+  gap: 30px;
 }
 
 .box-intro {
@@ -243,7 +243,7 @@ main {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 25px;
+  gap: 30px;
   margin-top: 50px;
 }
 
@@ -289,7 +289,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 25px;
+  gap: 30px;
   margin-top: 50px;
 }
 
@@ -303,7 +303,7 @@ main {
 
 .team-img-box {
   width: 100%;
-  height: 70%;
+  height: 260px;
 }
 
 .team-img-box > img {
@@ -343,16 +343,22 @@ main {
 }
 
 footer {
-  padding: 50px;
+  padding: 60px;
   background-color: var(--color-dark);
 }
+
+
 
 .logo-sct,
 .addr-sct {
   display: flex;
   flex-direction: column;
-  gap: 12px;
   font-style: normal;
+}
+
+.addr-sct {
+  margin-top: 28px;
+  gap: 12px;
 }
 
 #span-studio {
@@ -398,7 +404,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  gap: 10px;
+  gap: 8px;
   justify-content: center;
   align-items: center;
   margin-bottom: 45px;
@@ -440,7 +446,7 @@ footer {
 }
 
 .portfolio-box {
-  flex: 1 1 294px;
+  flex: 1 1 370px;
   border: solid 1px #eee;
   margin: 0 auto;
 }
