--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --box-shadow-hover: 0 6px 12px rgba(0, 0, 0, 0.3);
   --bg-feature-color: #f5f4fa;
   --color-svg: #afb1b8;
+  --transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 ul,
@@ -114,7 +115,7 @@ header > .container {
   color: var(--color-secondary);
   font-family: var(--font-primary);
   font-weight: 500;
-  transition: color 0.3s;
+  transition: color var(--transition);
 }
 
 .nav-li > a:hover {
@@ -136,14 +137,14 @@ header > .container {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  transition: 0.3s;
+  transition: var(--transition);
   color: var(--color-tertiary);
 }
 
 .addr > a {
   text-decoration: none;
   color: var(--color-tertiary);
-  transition: color 0.3s ease;
+  transition: color var(--transition) ease;
 }
 
 .addr:hover {
@@ -204,7 +205,7 @@ footer .container {
   flex-direction: column;
   gap: 20px;
   margin-top: 8px;
-  margin-left: 70px;
+  margin-left: 94px;
 }
 
 .footer-social {
@@ -212,7 +213,8 @@ footer .container {
   gap: 10px;
 }
 
-.pre-social h3 {
+.pre-social h3,
+.subsribe-section h3 {
   font-family: var(--font-primary);
   font-weight: 700;
   text-transform: uppercase;
@@ -233,7 +235,8 @@ footer .container {
 }
 
 .footer-social > li:hover {
-  transition: color 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
+  transition: color var(--transition), background-color var(--transition),
+    transform var(--transition);
   color: var(--color-white);
   background-color: var(--color-primary);
   transform: scale(0.9);
@@ -242,7 +245,8 @@ footer .container {
 }
 
 .team-social > li:hover {
-  transition: color 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
+  transition: color var(--transition), background-color var(--transition),
+    transform var(--transition);
   color: var(--color-white);
   background-color: var(--color-primary);
   transform: scale(0.9);
@@ -256,7 +260,8 @@ footer .container {
 }
 
 .footer-social-link > a:hover {
-  color: var(--color-primary);
+  background-color: var(--color-primary);
+  color: var(--color-white);
   cursor: pointer;
 }
 
@@ -333,7 +338,7 @@ main {
   padding: 15px 30px;
   border-radius: 4px;
   background-color: var(--color-primary);
-  transition: all 0.3s ease;
+  transition: var(--transition);
   box-shadow: var(--box-shadow-light);
   border: 0;
   color: var(--color-white);
@@ -394,7 +399,28 @@ main {
 }
 
 .img-box {
-  flex: 1 1 300px;
+  flex: 1 1 370px;
+  position: relative;
+  overflow: hidden;
+}
+
+.img-description {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 370px;
+  text-align: center;
+  background: rgba(47, 48, 58, 0.8);
+  padding: 27px 0;
+}
+.img-description > h3 {
+  font-family: var(--font-primary);
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--color-white);
 }
 
 .img-box img {
@@ -515,7 +541,7 @@ footer {
   font-family: var(--font-primary);
   font-weight: 400;
   font-size: 14px;
-  transition: 0.3s;
+  transition: var(--transition);
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -528,6 +554,7 @@ footer {
   font-family: var(--font-primary);
   font-weight: 400;
   font-size: 14px;
+  margin-right: 12px;
   color: var(--color-white);
 }
 
@@ -573,7 +600,7 @@ footer {
   align-items: center;
   color: var(--color-svg);
   border: 1px solid #afb1b8;
-  transition: 0.3s;
+  transition: var(--transition);
 }
 
 .clients-intro > li:hover {
@@ -602,7 +629,7 @@ footer {
   background: var(--color-background);
   border-radius: 4px;
   border: 0;
-  transition: 0.3s;
+  transition: var(--transition);
 }
 
 .filter-button:hover {
@@ -636,6 +663,13 @@ footer {
   flex: 1 1 370px;
   border: solid 1px #eee;
   margin: 0 auto;
+  position: relative;
+}
+
+.img-portfolio {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .img-portfolio > img {
@@ -644,11 +678,13 @@ footer {
 }
 
 .intro-portfolio {
+  position: relative;
   padding: 100px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 20px;
+  cursor: pointer;
 }
 
 .intro-portfolio > h3 {
@@ -673,5 +709,345 @@ p {
 
 .active {
   color: var(--color-primary);
-  transition: 0.3s;
+  transition: var(--transition);
+  position: relative;
+}
+
+.active::after {
+  content: "";
+  position: absolute;
+  top: 46px;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--color-primary);
+  border-radius: 2px;
+}
+
+.subsribe-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: 94px;
+  margin-top: 8px;
+}
+
+.subsribe-form {
+  display: flex;
+  gap: 12px;
+}
+
+.subscribe-input {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  height: 50px;
+  width: 358px;
+  padding: 16px;
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+.subscribe-input:focus {
+  outline: none;
+  border: 1px solid var(--color-primary);
+}
+
+.subscribe-input::placeholder {
+  font-family: var(--font-primary);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1.2;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.icon-send {
+  width: 24px;
+  height: 24px;
+  color: var(--color-white);
+}
+
+.subcribe-btn {
+  color: var(--color-white);
+  background: var(--color-primary);
+  border: 0;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 11px 30px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.subcribe-btn > span {
+  font-family: var(--font-primary);
+  font-style: normal;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.06em;
+}
+
+.contact-modal {
+  display: block;
+  position: fixed;
+  z-index: 1000;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background-color: var(--color-white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 528px;
+  height: 581px;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 999;
+  display: block;
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
+
+.contact-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.contact-modal {
+  box-shadow: 0px 2px 1px 0px #00000033;
+  box-shadow: 0px 1px 1px 0px #00000024;
+  background-color: var(--color-white);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px 0px #0000001f;
+}
+
+.contact-field {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 4px;
+}
+
+.contact-input {
+  padding: 12px 0 12px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  width: 100%;
+}
+
+.contact-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.8;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.agreement-section {
+  display: flex;
+  align-items: center;
+}
+
+.contact-textarea {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding: 16px;
+  outline: none;
+}
+
+.modal-content > h2 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 1.2;
+  color: var(--color-secondary);
+  margin-bottom: 12px;
+}
+
+.contact-field > label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.9;
+  color: var(--color-tertiary);
+}
+
+.icon-person,
+.icon-contact-email,
+.icon-phone {
+  position: absolute;
+  top: 20px;
+  left: 15px;
+  transform: translateY(-50%);
+  color: var(--color-tertiary);
+  width: 18px;
+  height: 18px;
+}
+
+.contact-input-box {
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+
+.contact-input-box:focus-within .icon {
+  color: var(--color-primary);
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  margin-top: 6px;
+  margin-right: 6px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #757575;
+  font-size: 24px;
+  border: 1px solid #0000001a;
+}
+
+.close:hover {
+  cursor: pointer;
+  transition: var(--transition);
+  color: var(--color-primary);
+}
+
+.agreement-section > input {
+  border: 0.2px solid #ffffff;
+  cursor: pointer;
+  width: 16px;
+  height: 15px;
+  background: #212121;
+}
+
+.agreement-section > input:checked {
+  background-color: var(--color-primary);
+}
+
+.contact-input:focus,
+.contact-textarea:focus {
+  border: 1px solid var(--color-primary);
+  border-radius: 4px;
+}
+
+.agreement-section > p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.7;
+  color: var(--color-tertiary);
+}
+
+.href-agreement {
+  color: var(--color-primary);
+}
+
+.contact-btn {
+  padding: 10px 65px;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-family: var(--font-primary);
+  display: flex;
+  font-weight: 700;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 1.2;
+  line-height: 30px;
+  color: var(--color-white);
+  border: 0;
+  margin-top: 30px;
+}
+
+.modal-overlay.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-overlay:not(.is-hidden) {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.contact-modal.is-hidden {
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0.8);
+  pointer-events: none;
+}
+
+.contact-modal:not(.is-hidden) {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+  pointer-events: auto;
+}
+
+.back-card {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform var(--transition), opacity var(--transition);
+  padding: 24px;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: start;
+  background: rgba(33, 150, 243, 0.9);
+  float: left;
+}
+
+.back-card > p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 1.56;
+  color: #ffffff;
+}
+
+.portfolio-box:hover .back-card {
+  opacity: 1;
+  cursor: pointer;
+  transform: translateY(0);
+}
+
+.portfolio-box:hover {
+  box-shadow: 1px 4px 6px 0px #00000029;
+  box-shadow: 0px 4px 4px 0px #0000000f;
+  box-shadow: 0px 1px 1px 0px #0000001f;
+  transition: box-shadow var(--transition);
 }
