--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@ img {
   padding: 0;
 }
 
+img {
+  display: block;
+}
+
 body {
   margin: 0;
   font-size: 14px;
@@ -112,7 +116,6 @@ header > .container {
 
 .nav-li > a {
   text-decoration: none;
-  color: var(--color-secondary);
   font-family: var(--font-primary);
   font-weight: 500;
   transition: color var(--transition);
@@ -122,6 +125,11 @@ header > .container {
   color: var(--color-primary);
   cursor: pointer;
 }
+
+.nav-li > a:not(.active) {
+  color: var(--color-secondary);
+}
+
 
 .nav-addr {
   display: flex;
@@ -198,14 +206,15 @@ header > .container {
 
 footer .container {
   display: flex;
+  align-items: baseline;
+  gap: 94px;
+  flex-grow: 1;
 }
 
 .pre-social {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 8px;
-  margin-left: 94px;
 }
 
 .footer-social {
@@ -392,7 +401,7 @@ main {
 
 .img-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
   margin-top: 50px;
@@ -402,15 +411,16 @@ main {
   flex: 1 1 370px;
   position: relative;
   overflow: hidden;
+  max-width: 370px;
 }
+
 
 .img-description {
   position: absolute;
   display: block;
   bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 370px;
+  left: 0;
+  width: 100%;
   text-align: center;
   background: rgba(47, 48, 58, 0.8);
   padding: 27px 0;
@@ -460,14 +470,15 @@ main {
 .team-intro {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 30px;
   margin-top: 50px;
 }
 
 .team-box {
-  flex: 1;
+  flex: 1 1 270px;
   display: flex;
+  max-width: 270px;
   flex-direction: column;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
@@ -475,7 +486,7 @@ main {
 
 .team-img-box {
   width: 100%;
-  height: 260px;
+  height: 100%;
 }
 
 .team-img-box > img {
@@ -568,13 +579,6 @@ footer {
   color: var(--color-secondary);
 }
 
-.section--fifth .container ul {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  list-style: none;
-  margin-top: 50px;
-}
 
 .icon-logo-6,
 .icon-logo-5,
@@ -589,11 +593,15 @@ footer {
 .clients-intro {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  list-style: none;
   margin-top: 50px;
 }
 
 .clients-intro > li {
   flex: 1 1 170px;
+  max-width: 170px;
   height: 92px;
   display: flex;
   justify-content: center;
@@ -602,7 +610,6 @@ footer {
   border: 1px solid #afb1b8;
   transition: var(--transition);
 }
-
 .clients-intro > li:hover {
   cursor: pointer;
   border: 1px solid var(--color-primary);
@@ -729,8 +736,7 @@ p {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-left: 94px;
-  margin-top: 8px;
+  width: 100%;
 }
 
 .subsribe-form {
@@ -744,10 +750,10 @@ p {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   height: 50px;
-  width: 358px;
   padding: 16px;
   color: var(--color-white);
   transition: var(--transition);
+  width: 100%;
 }
 
 .subscribe-input:focus {
@@ -802,8 +808,8 @@ p {
   transform: translate(-50%, -50%) scale(0);
   background-color: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  width: 528px;
-  height: 581px;
+  max-width: 528px;
+  max-height: 581px;
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -835,11 +841,10 @@ p {
 }
 
 .contact-modal {
-  box-shadow: 0px 2px 1px 0px #00000033;
-  box-shadow: 0px 1px 1px 0px #00000024;
+  box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #0000001f,
+    0px 1px 3px 0px #0000001f;
   background-color: var(--color-white);
   border-radius: 4px;
-  box-shadow: 0px 1px 3px 0px #0000001f;
 }
 
 .contact-field {
@@ -865,17 +870,19 @@ p {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.agreement-section {
-  display: flex;
-  align-items: center;
-}
-
 .contact-textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   padding: 16px;
   outline: none;
+}
+
+.modal-content {
+  position: relative;
+  width: 100%;
+  padding: 40px 39px 40px 41px;
+  overflow: hidden;
 }
 
 .modal-content > h2 {
@@ -903,7 +910,7 @@ p {
   top: 20px;
   left: 15px;
   transform: translateY(-50%);
-  color: var(--color-tertiary);
+  color: var(--color-secondary);
   width: 18px;
   height: 18px;
 }
@@ -933,6 +940,7 @@ p {
   color: #757575;
   font-size: 24px;
   border: 1px solid #0000001a;
+  background: transparent;
 }
 
 .close:hover {
@@ -941,16 +949,26 @@ p {
   color: var(--color-primary);
 }
 
-.agreement-section > input {
-  border: 0.2px solid #ffffff;
+.agreement-label > input {
+  appearance: none;
+  border: 2px solid var(--color-secondary);
   cursor: pointer;
   width: 16px;
-  height: 15px;
-  background: #212121;
+  height: 16px;
 }
 
-.agreement-section > input:checked {
-  background-color: var(--color-primary);
+.agreement-label > input:checked {
+  background: var(--color-primary);
+  border: 2px solid var(--color-primary);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.agreement-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .contact-input:focus,
@@ -959,7 +977,7 @@ p {
   border-radius: 4px;
 }
 
-.agreement-section > p {
+.agreement-label > p {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -976,17 +994,24 @@ p {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  font-family: var(--font-primary);
   display: flex;
-  font-weight: 700;
   justify-content: center;
   align-items: center;
   text-align: center;
-  letter-spacing: 1.2;
-  line-height: 30px;
   color: var(--color-white);
   border: 0;
-  margin-top: 30px;
+  margin-top: 20px;
+  font-family: var(--font-primary);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.96;
+  transition: var(--transition);
+}
+
+.contact-btn:hover {
+  cursor: pointer;
+  background: #0f6ab4;
 }
 
 .modal-overlay.is-hidden {
@@ -1046,8 +1071,14 @@ p {
 }
 
 .portfolio-box:hover {
-  box-shadow: 1px 4px 6px 0px #00000029;
-  box-shadow: 0px 4px 4px 0px #0000000f;
-  box-shadow: 0px 1px 1px 0px #0000001f;
+  box-shadow: 1px 4px 6px 0px #00000029,  0px 4px 4px 0px #0000000f, 0px 1px 1px 0px #0000001f;
   transition: box-shadow var(--transition);
+}
+
+.addr-sct {
+  white-space: nowrap;
+}
+
+.addr-sct a {
+  display: inline-block;
 }
