--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,6 +9,7 @@
   justify-content: center;
 
   .container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 94px;
