--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -49,6 +49,10 @@
         list-style: none;
         width: 100%;
 
+        @media (max-width: 810px) {
+            grid-template-columns: repeat(auto-fill, minmax(354px, 1fr));
+        }
+
         .portfolio-container__portfolio-box {
             border: solid 1px #eee;
             margin: 0 auto;
