fixed second section

--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -64,6 +64,10 @@
 
 .section--second {
 
+  @media (max-width: 768px) {
+    padding-bottom: 94px;
+    
+  }
 
   .container {
     display: grid;
